--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
-  <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+  <link rel="icon" href="{% static 'images/favicons/favicon.png' %}" type="image/png">
 
   {% block css %}
 
