--- a/app/templates/flags/flag-detail.html
+++ b/app/templates/flags/flag-detail.html
@@ -180,134 +180,127 @@
 
 {# Colors & design v3#}
 {% if colors or flag.design_description %}
-<div class="py-3 py-xl-5" id="colors">
-    <div class="container">
-        <h2 class="py-3">Цвета и дизайн государственного флага {{country.ru_name_rod}}</h2>
+<div class="bg-white" id="colors">
+    {# H2 #}
+    {% include "partials/_h2.html" with h2="Цвета и дизайн государственного флага "|add:country.ru_name_rod %}
 
-        <div class="row">
+    <div class="py-3 pt-xl-4 pb-xl-5">
+        <div class="container">
+            <div class="row">
+                {% if colors %}
+                <div class="py-3 col-12">
+                    <div class="row">
+                        {% for color in colors %}
+                            <div class="col-12 col-xs-6 col-sm-6 {% if colors|length < 3 %}col-md-6 col-lg-4{% elif colors|length < 4 %}col-md-4 col-lg-4{%else%}col-md-4 col-lg-3{%endif%}">
+                                <table class="table table-hover table-sm table-bordered country_info"
+                                    style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                    <thead>
+                                        <tr class="text-center">
+                                            <th colspan="3"
+                                                style="background-color:#{{color.hex}}; border: 1px solid #{{color.hex}} !important;">
+                                                <a href="{% url 'flags:color-detail' color.color_group.slug %}"
+                                                    class="badge badge-light badge-100">
+                                                    {{color.color_group}}
+                                                </a>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                HEX</th>
+                                            <td
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                #{{color.hex|upper}}</td>
+                                            <td class="text-center"
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                <a data-clipboard-text="{{color.hex}}" class="cp" data-toggle="tooltip"
+                                                    data-placement="top" title="Скопировать">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                        fill="currentColor" class="bi bi-clipboard-plus"
+                                                        viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd"
+                                                            d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z" />
+                                                        <path
+                                                            d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                                                        <path
+                                                            d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                                                    </svg>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                RGB</th>
+                                            <td
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                rgb({%for val in color.rgb%}{{val}}{% if not forloop.last %},
+                                                {% endif %}{%endfor%})</td>
+                                            <td class="text-center"
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                <a data-clipboard-text="rgb({%for val in color.rgb%}{{val}}{% if not forloop.last %}, {% endif %}{%endfor%})"
+                                                    class="cp" data-toggle="tooltip" data-placement="top"
+                                                    title="Скопировать">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                        fill="currentColor" class="bi bi-clipboard-plus"
+                                                        viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd"
+                                                            d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z" />
+                                                        <path
+                                                            d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                                                        <path
+                                                            d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                                                    </svg>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                CMYK</th>
+                                            <td colspan="2"
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                {%for val in color.cmyk%}{{val}}%{% if not forloop.last %},
+                                                {% endif %}{%endfor%}</td>
+                                        </tr>
+                                        {% if color.pantone %}
+                                        <tr>
+                                            <th
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                Pantone</th>
+                                            <td colspan="2"
+                                                style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
+                                                {{color.pantone}}</td>
+                                        </tr>
+                                        {% endif %}
 
-            {% if colors %}
-            <div class="py-3 col-md-12 col-sm-12 col-xs-12">
-                <div class="row">
-                {% for color in colors %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% endfor %}
 
-                {% if colors|length < 3 %}
-                    <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-4">
-                    {% elif colors|length < 4 %}
-                        <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-lg-4">
-                    {%else%}
-                        <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-lg-3">
-                    {%endif%}
-
-                        <table class="table table-hover table-sm table-bordered country_info"
-                            style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                            <thead>
-                                <tr class="text-center">
-                                    <th colspan="3"
-                                        style="background-color:#{{color.hex}}; border: 1px solid #{{color.hex}} !important;">
-                                        <a href="{% url 'flags:color-detail' color.color_group.slug %}"
-                                            class="badge badge-light badge-100">
-                                            {{color.color_group}}
-                                        </a>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        HEX</th>
-                                    <td
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        #{{color.hex|upper}}</td>
-                                    <td class="text-center"
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        <a data-clipboard-text="{{color.hex}}" class="cp" data-toggle="tooltip"
-                                            data-placement="top" title="Скопировать">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                fill="currentColor" class="bi bi-clipboard-plus"
-                                                viewBox="0 0 16 16">
-                                                <path fill-rule="evenodd"
-                                                    d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z" />
-                                                <path
-                                                    d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
-                                                <path
-                                                    d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
-                                            </svg>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        RGB</th>
-                                    <td
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        rgb({%for val in color.rgb%}{{val}}{% if not forloop.last %},
-                                        {% endif %}{%endfor%})</td>
-                                    <td class="text-center"
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        <a data-clipboard-text="rgb({%for val in color.rgb%}{{val}}{% if not forloop.last %}, {% endif %}{%endfor%})"
-                                            class="cp" data-toggle="tooltip" data-placement="top"
-                                            title="Скопировать">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                fill="currentColor" class="bi bi-clipboard-plus"
-                                                viewBox="0 0 16 16">
-                                                <path fill-rule="evenodd"
-                                                    d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z" />
-                                                <path
-                                                    d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
-                                                <path
-                                                    d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
-                                            </svg>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        CMYK</th>
-                                    <td colspan="2"
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        {%for val in color.cmyk%}{{val}}%{% if not forloop.last %},
-                                        {% endif %}{%endfor%}</td>
-                                </tr>
-                                {% if color.pantone %}
-                                <tr>
-                                    <th
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        Pantone</th>
-                                    <td colspan="2"
-                                        style="border: 2px solid #{%if color.hex|lower == 'ffffff'%}dee2e6{%else%}{{color.hex}}{%endif%} !important;">
-                                        {{color.pantone}}</td>
-                                </tr>
-                                {% endif %}
-
-                            </tbody>
-                        </table>
-                        </div>
-                {% endfor %}
-
+                    </div>
                 </div>
-            </div>
 
-
-            <div class="py-3 col-md-12 col-sm-12 col-xs-12">
-                <div class="alert alert-primary" role="alert">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                        class="bi bi-info-square" viewBox="0 0 16 16">
-                        <path
-                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-                        <path
-                            d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-                    </svg>
-                    Список государственных флагов с
-                    <a href="{% url 'flags:colors-count' colors.count %}" class="alert-link">
-                        {{colors|length|ru_count:'t'}} {% if colors|length == 1 %}цветом{% else %}цветами{% endif %}
-                    </a>
+                {# Colors count info #}
+                <div class="py-3 col-12">
+                    <div class="alert alert-primary" role="alert">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-info-square" viewBox="0 0 16 16">
+                            <path
+                                d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                            <path
+                                d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                        Список государственных флагов с
+                        <a href="{% url 'flags:colors-count' colors.count %}" class="alert-link">
+                            {{colors|length|ru_count:'t'}} {% if colors|length == 1 %}цветом{% else %}цветами{% endif %}
+                        </a>
+                    </div>
                 </div>
-            </div>
-            {% endif %}
+                {% endif %}
 
                 {% if flag.design_description and flag.construction_image_file or flag.elements.all|length > 0 %}
                 <div class="py-3 col-xs-12 col-sm-12 col-md-8 col-lg-8">
@@ -357,6 +350,7 @@
                 </div>
                 {% endif %}
 
+            </div>
         </div>
     </div>
 </div>
