--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8806,7 +8806,8 @@ img.dl-example {
 .second-menu {
   top: 71px;
   border-top: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee; }
+  border-bottom: 1px solid #eeeeee;
+  z-index: 100; }
 
 .second-menu .nav-link {
   padding: 8px 8px;
