--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -216,6 +216,7 @@ img.dl-example {
   top: 71px;
   border-top: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  z-index: 100;
 }
 .second-menu .nav-link {
   padding: 0.5rem 0.5rem;
