--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
   {% block css %}
 
   <!-- Your stuff: Third-party CSS libraries go here -->
-  <link href="https://cdn.jsdelivr.net/gh/StephanWagner/svgMap@v2.0.3/dist/svgMap.min.css" rel="stylesheet">
+  <!--<link href="https://cdn.jsdelivr.net/gh/StephanWagner/svgMap@v2.0.3/dist/svgMap.min.css" rel="stylesheet">-->
   {% compress css %}
   <!-- This file stores project-specific CSS -->
   <link href="{% static 'css/project.css' %}" rel="stylesheet">{% endcompress %}
@@ -33,17 +33,17 @@
   {# Placed at the top of the document so pages load faster with defer #}
   {% block javascript %}
 
-  <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/StephanWagner/svgMap@v2.0.3/dist/svgMap.min.js"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/StephanWagner/svgMap@v2.0.3/dist/svgMap.min.js"></script>-->
 
   <!-- place project specific Javascript in this file -->
 
   <!-- Vendor dependencies bundled as one file-->
 
-  <script defer src="{% static 'js/vendors.min.js' %}"></script>
-  <script defer src="{% static 'js/slick.min.js' %}"></script>
+  {% compress js %}<script defer src="{% static 'js/vendors.min.js' %}"></script>
+  <!--<script defer src="{% static 'js/slick.min.js' %}"></script>-->
   <!-- place project specific Javascript in this file -->
-  {% compress js %}<script defer src="{% static 'js/project.js' %}"></script>{% endcompress %}
+  <script defer src="{% static 'js/project.js' %}"></script>{% endcompress %}
 
   {% endblock javascript %}
   {% block json-ld %}{% endblock json-ld %}
