--- a/app/templates/flags/flag-detail.html
+++ b/app/templates/flags/flag-detail.html
@@ -758,6 +758,10 @@
                             <td>{{country.region.parent}} - {{country.region.name}}</td>
                         </tr>
                         <tr>
+                            <td>Столица</td>
+                            <td>{{country.ru_capital_name}}</td>
+                        </tr>
+                        <tr>
                             <td>Валюта</td>
                             <td>
                                 {% for cur in country.currencies.all %}
@@ -823,7 +827,10 @@
                 </table>
             </div>
             <div class="col-12 col-md-8">
-                <div id="svgMap"></div>
+                {# <div id="svgMap"></div> #}
+                {% if country.map_iframe %}
+                    {{ country.map_iframe|safe }}
+                {% endif %}
             </div>
         </div>
     </div>
