--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -1,6 +1,6 @@
 @import "custom_bootstrap_vars";
 @import "bootstrap";
-@import "slick.scss", "slick-theme.scss";
+// @import "slick.scss", "slick-theme.scss";
 
 
 
@@ -49,6 +49,7 @@ $red: #b94a48;
   //  url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -57,6 +58,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -65,6 +67,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -73,6 +76,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -81,6 +85,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -89,6 +94,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -97,6 +103,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -105,6 +112,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -113,6 +121,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -121,6 +130,7 @@ $red: #b94a48;
   /* Safari, Android, iOS */
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
