--- a/app/templates/flags/flag-detail.html
+++ b/app/templates/flags/flag-detail.html
@@ -328,21 +328,19 @@
                 {% endif %}
 
                 {% if flag.design_description %}
-                <div class="py-3 col-12 {% if flag.construction_image_file %}col-md-8 col-lg-8{%endif%}">
+                <div class="py-3 col-12 {% if flag.construction_image %}col-md-8 col-lg-8{%endif%}">
                     {{flag.design_description|safe}}
 
                 </div>
 
-                {% if flag.construction_image_file %}
+                {% if flag.construction_image and flag.construction_webp %}
                 <div class="col-12 col-md-4">
                     <h3 class="py-2">Схема флага</h3>
                     <figure class="figure">
                         <picture>
-                            <source type="image/webp"
-                                srcset="{{MEDIA_URL}}/construction/{{country.iso_code_a2|lower}}-flag-construction.webp">
-
-                            <img src="{{MEDIA_URL}}/construction/{{country.iso_code_a2|lower}}-flag-construction.png" alt="{{ flag.title }}"
-                                title="{{ flag.title }} {{flag.name}} - картинка" class="figure-img img-fluid">
+                            <source type="image/webp" srcset="{% get_media_prefix %}{{flag.construction_webp.name}}">
+                            <img src="{{flag.construction_image.url}}" alt="Схема флага {{country.ru_name_rod}}"
+                                title="Схема флага {{country.ru_name_rod}}" class="figure-img img-fluid">
                         </picture>
                         <figcaption class="figure-caption text-right">{{flag.title}}: схема</figcaption>
                     </figure>
@@ -366,7 +364,7 @@
 </div>
 {% endif %}
 
-{# Historical flags and history text v3#}
+{# Historical flags and history text v4#}
 {% if historical|length > 0 or flag.history_text %}
 <div class="bg-white" id="history">
     {# H2 #}
@@ -397,17 +395,30 @@
                             id="v-pills-{{ h_flag.id }}"
                             role="tabpanel"
                             aria-labelledby="v-pills-{{ h_flag.id }}-tab">
-                            <h3>{{h_flag.title}}</h3>
-                            <picture>
-                                <source type="image/webp" srcset="{{MEDIA_URL}}/historical-flags/{{h_flag.country.iso_code_a2|lower}}/{{h_flag.country.iso_code_a2|lower}}-{{h_flag.from_year}}-{{h_flag.to_year}}.webp">
-
-                                <img src="{{MEDIA_URL}}/historical-flags/{{h_flag.country.iso_code_a2|lower}}/{{h_flag.country.iso_code_a2|lower}}-{{h_flag.from_year}}-{{h_flag.to_year}}.png"
-                                    alt="{{ h_flag.title }} {{h_flag.from_year}}-{{h_flag.to_year}}"
-                                    title="{{ h_flag.title }} {{h_flag.from_year}}-{{h_flag.to_year}} - картинка"
-                                    class="float-left mb-3 mr-3 main-flag"
-                                    width="300px">
-                            </picture>
-                            {{h_flag.description|safe}}
+                            <div class="row">
+                                <h3 class="pb-2 col-12 d-flex justify-content-center">{{h_flag.title}}</h3>
+                                {% if h_flag.images.all %}
+                                <div class="col-12 d-flex justify-content-center">
+                                {% for img in h_flag.images.all %}
+                                    {% if img.image and img.webp %}
+                                    <figure class="figure historical-img">
+                                        <picture>
+                                            <source type="image/webp" srcset="{{img.webp|resize:'300'}}">
+                                            <img src="{{img.image|resize:'300'}}" alt="{{img.alt}}"
+                                                title="{{img.alt}}" class="mb-3 mr-3 h-flag">
+                                        </picture>
+                                        {% if img.caption %}
+                                        <figcaption class="figure-caption text-center">{{img.caption}}</figcaption>
+                                        {% endif %}
+                                    </figure>
+                                    {% endif %}
+                                {% endfor %}
+                                </div>
+                                {% endif %}
+                                <div class="col-12">
+                                {{h_flag.description|safe}}
+                                </div>
+                            </div>
                         </div>
                         {% endfor %}
                     </div>
