--- a/app/templates/flags/flag-detail.html
+++ b/app/templates/flags/flag-detail.html
@@ -342,7 +342,7 @@
                             <img src="{{flag.construction_image.url}}" alt="Схема флага {{country.ru_name_rod}}"
                                 title="Схема флага {{country.ru_name_rod}}" class="figure-img img-fluid">
                         </picture>
-                        <figcaption class="figure-caption text-right">{{flag.title}}: схема</figcaption>
+                        <figcaption class="figure-caption text-center">{{flag.title}}: схема</figcaption>
                     </figure>
                 </div>
                 {% endif %}
@@ -383,7 +383,7 @@
                             role="tab"
                             aria-controls="v-pills-{{ h_flag.id }}"
                             aria-selected="true">
-                            {{ h_flag.from_year }}-{{ h_flag.to_year }}
+                            {{ h_flag.from_year }} - {% if h_flag.to_year %}{{ h_flag.to_year }}{% else %}???{% endif %}
                         </a>
                         {% endfor %}
                     </div>
@@ -398,7 +398,7 @@
                             <div class="row">
                                 <h3 class="pb-2 col-12 d-flex justify-content-center">{{h_flag.title}}</h3>
                                 {% if h_flag.images.all %}
-                                <div class="col-12 d-flex justify-content-center">
+                                <div class="col-12 d-flex justify-content-around">
                                 {% for img in h_flag.images.all %}
                                     {% if img.image and img.webp %}
                                     <figure class="figure historical-img">
