--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8718,6 +8718,45 @@ img.dl-example {
   font-size: 14px;
   font-weight: bold; }
 
+.historical-img {
+  margin: 0px !important;
+  padding: 0px !important;
+  height: 160px;
+  overflow: hidden;
+  background-clip: border-box;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative; }
+
+.historical-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -o-object-position: center;
+     object-position: center;
+  position: absolute;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  top: 0;
+  left: 0; }
+
+.historical-img:hover img {
+  -webkit-transform: scale(1);
+          transform: scale(1); }
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden; }
+
 .footer {
   background-color: #343a40;
   min-height: 100px;
