--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -326,7 +326,40 @@ img.dl-example {
   font-size: 14px;
   font-weight: bold;
 }
+// Historical pictures
+.historical-img {
+  margin: 0px !important;
+  padding: 0px !important;
+  height: 160px;
+  overflow: hidden;
+  background-clip: border-box;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
 
+.historical-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  transform: scale(1.2);
+  object-position: center;
+  position: absolute;
+  transition: .5s ease;
+  top: 0;
+  left: 0;
+}
+.historical-img:hover img{
+  // object-fit: contain;
+  transform: scale(1);
+}
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
 // Footer
 .footer {
   background-color: $dark;
